--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <p>Вариант #1 Власов В.</p>
     <ol>
         <li><a href="lab1/index.html">Основы построения HTML-документов и подготовка изображений для Web</a></li>
+        <li><a href="lab1/index.html">Основы построения HTML-документов и подготовка изображений для Web</a></li>
     </ol>
 </body>
 </html>
